--- a/src/nhap/lknhap.html
+++ b/src/nhap/lknhap.html
@@ -211,7 +211,7 @@
             const obj = {
                 // stthopdong: parseInt(stthopdong, 10),
                 tenhang: tenhang,
-                partnum: partnum,
+                partnum: partnum.replace(/^\s+|\s+$/gm,''),
                 sohopdong: sohopdong,
                 sanpham: sanpham,
                 cty: cty,
