--- a/src/preEnter/login.html
+++ b/src/preEnter/login.html
@@ -156,12 +156,12 @@
         import { GoogleAuthProvider, getAuth, signInWithRedirect, deleteUser, onAuthStateChanged, signInAnonymously } from 'https://www.gstatic.com/firebasejs/9.5.0/firebase-auth.js';
 
         const firebaseConfig = {
-            apiKey: process.env.API_KEY,
-            authDomain: process.env.AUTHDOMAIN,
-            projectId: process.env.PROJECT_ID,
-            storageBucket: process.env.STORAGEBUCKET,
-            messagingSenderId: process.env.MSG_SENDER_ID,
-            appId: process.env.APPID,
+            apiKey: "AIzaSyCmX9tG7JwURUWHrS6rJU8C3ZUA6-4bo4w",
+            authDomain: "data-manager-84213.firebaseapp.com",
+            projectId: "data-manager-84213",
+            storageBucket: "data-manager-84213.appspot.com",
+            messagingSenderId: "224760609164",    
+            appId: "1:224760609164:web:d01de3f761e154e6733ea9"
         };
 
         const app = initializeApp(firebaseConfig);
