--- a/src/nhap/tpnhap.html
+++ b/src/nhap/tpnhap.html
@@ -126,7 +126,7 @@
 
             const obj = {
                 tenhang: tenhang,
-                partnum: partnum,
+                partnum: partnum.replace(/^\s+|\s+$/gm,''),
                 mcu: mcu,
                 sohopdong: sohopdong,
                 chip: chip,
