--- a/src/index.html
+++ b/src/index.html
@@ -91,8 +91,9 @@
                 <div class="col-4">
                     <div style="background-color: #6f751f; border-radius: 2%; width: 250px; height: 250px; flex-direction: column; display: flex; margin-left: auto; margin-right: auto;">
                         <h1 style="text-align: center; color: white; margin-top: 20px;">Keyword</h1>
-                        <a href="addExcel/addExcel.html" style="margin-left: 25px; color: white; font-size: 20px; margin-top: 60px;">Nhập keyword</a>
-                        <a href="addExcel/removeKeyword.html" style="margin-left: 25px; color: white; font-size: 20px; margin-top: 25px;">Xóa keyword</a>
+                        <a href="addExcel/addExcel.html" style="margin-left: 25px; color: white; font-size: 20px; margin-top: 30px;">Nhập keyword</a>
+                        <a href="addExcel/editKeyword.html" style="margin-left: 25px; color: white; font-size: 20px; margin-top: 15px;">Chỉnh sửa keyword</a>
+                        <a href="addExcel/removeKeyword.html" style="margin-left: 25px; color: white; font-size: 20px; margin-top: 15px;">Xóa keyword</a>
                     </div>
                 </div>
 
