--- a/src/nhap/lknhap.html
+++ b/src/nhap/lknhap.html
@@ -321,7 +321,7 @@
                 }
                 if (ok) {
                     dialogs.alert('Edit documents successfully');
-                    form.action = "../chinhsua/cslk.html"; form.submit(); 
+                    form.action = "../chinhsua/cslktmp.html"; form.submit(); 
                 } //all are correct => Turn back to chinhsua pages
                 else dialogs.alert(`Cannot edit some documents \n ${errors}`);
             }
